<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">PSIAP Analytic Tester</string>
    <string name="app2_name">PSIAP Video Streamer</string>

    <string name="title_home">Stream</string>
    <string name="title_dashboard">Camera</string>
    <string name="title_notifications">File</string>
    <string name="stream_text_start">Start Streaming</string>
    <string name="stream_text_stop">Stop Streaming</string>

    <!-- preferences -->
    <string name="title_activity_settings">PSIAP Analytic Settings</string>
    <string name="action_settings">Configuration</string>
    <string name="pref_serverhost">Host</string>
    <string name="pref_serverport">Port</string>
    <string name="pref_https">HTTPS</string>
    <string name="pref_dh_access_token">Access Token</string>
    <string name="pref_dh_refresh_token">Refresh Token</string>
    <string name="pref_dh_deviceid">Device ID</string>
    <string name="pref_rtspurl">RTMP URL</string>

    <string name="sel_video">Select a video to stream</string>

    <string name="key_rtmp">rtmp_url</string>
    <string name="key_media_filepath">media_filepath</string>


    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Server Config</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="server_address_hint">Server address</string>
    <string name="device_id_hint">Device Id</string>
    <string name="access_token_hint">DevhiceHive Access token</string>
    <string name="refresh_token_hint">DeviceHive Refresh token</string>
    <string name="rtsp_token_hint">rtmp://localhost:1935/LiveApp/streamname</string>
    <string name="login">Login</string>

    <string name="permission_dialog_title">No permissions granted</string>
    <string name="dialog_title">No internet connection</string>
    <string name="dialog_message">Try:\n\t\u2022 Turning off airplane mode\n\t\u2022 Turning on mobile data or Wi-Fi\n\t\u2022 Checking the signal in your area</string>
    <string name="permission_dialog_message">This action needs permissions</string>
    <string name="location_disabled_message">Please enable location settings to send real location</string>
    <string name="location_permission_not_granted_message">Please grant location permissions to send real location</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start</string>
    <string name="start2">Start Example2 Activity</string>
    <string name="stop">Stop</string>

    <string name="service_is_working">Location Service is working</string>
    <string name="service_is_scheduled">Location Service is scheduled</string>
    <string name="text_error">Input field cannot be empty</string>

    <!-- ant media server strings -->
    <string name="live_indicator">on-air</string>
    <string name="start_broadcasting">Start Broadcasting</string>
    <string name="stream_name">Stream Name</string>
    <string name="nocamera">No camera exists in your device</string>
    <string name="camera_not_running_properly">Camera is not running properly</string>
    <string name="restart">Restart</string>
    <string name="streaming_not_finished">Your previous broadcast still sends packets due to slow internet speed</string>
    <string name="oopps_shouldnt_happen">Oopps this shouldn\'t be happened. Please let the library developer this status</string>
    <string name="broadcast_connection_lost">Connection to media server is lost</string>
    <string name="low_bandwidth">Network speed is low. Latency is increasing.</string>
    <string name="not_eligible_for_broadcast">Your device is not eligible to broadcast. There is no hardware encoder.</string>
    <string name="no_network_connectivity">You\'re not connected to any network. Please connect to Internet</string>
    <string name="stop_broadcasting">Stop</string>
    <string name="camera_permission_is_required">Camera permission is required to run this app</string>
    <string name="microphone_permission_is_required">Microphone permission is required to run this app</string>
    <string name="permission">Permission</string>
    <string name="app_doesnot_work_without_permissions">App does not work without permissions. Please give Camera and Record Audio permission on app settings</string>


    <string name="video">Video</string>

    <string name="audio">Audio</string>

    <string name="text">Text</string>

    <string name="retry">Retry</string>

    <string name="selection_disabled">Disabled</string>

    <string name="selection_default">Default</string>

    <string name="selection_default_none">Default (none)</string>

    <string name="unexpected_intent_action">Unexpected intent action: <xliff:g id="action">%1$s</xliff:g></string>

    <string name="enable_random_adaptation">Enable random adaptation</string>

    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>

    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>

    <string name="error_drm_unknown">An unknown DRM error occurred</string>

    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_querying_decoders">Unable to query device decoders</string>

    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>

    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>

    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>

    <string name="storage_permission_denied">Permission to access storage was denied</string>

    <string name="sample_list_load_error">One or more sample lists failed to load</string>
    <string name="stream_not_started">Failed to start. Please check server url and security credentials.</string>

</resources>
